--- a/derive/Cargo.toml
+++ b/derive/Cargo.toml
@@ -6,6 +6,15 @@ repository.workspace = true
 homepage.workspace = true
 license.workspace = true
 description = "A placeholder"
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+
+[lib]
+proc-macro = true
 
 [dependencies]
+darling = "0.20"
+heck = "0.4"
+indexmap = "2"
+proc-macro2 = "1"
+prettyplease = "0.2"
+quote = "1"
+syn = "2"
