--- a/derive/Cargo.toml
+++ b/derive/Cargo.toml
@@ -18,3 +18,5 @@ proc-macro2 = "1"
 prettyplease = "0.2"
 quote = "1"
 syn = "2"
+
+smear-types = { path = "../types", default-features = false, features = ["derive"] }
