--- a/types/Cargo.toml
+++ b/types/Cargo.toml
@@ -1,14 +1,14 @@
 [package]
-name = "smear"
+name = "smear-types"
 version.workspace = true
 edition.workspace = true
 repository.workspace = true
 homepage.workspace = true
 license.workspace = true
-description = "a placeholder"
 
 [features]
 default = []
+derive = ["darling", "syn", "quote", "proc-macro2"]
 
 bigint = ["dep:num-bigint"]
 bigdecimal = ["dep:bigdecimal"]
@@ -17,21 +17,16 @@ decimal = ["dep:rust_decimal"]
 humantime = ["dep:humantime"]
 indexmap = ["dep:indexmap"]
 url = ["dep:url"]
+uuid = ["dep:uuid"]
 
 [dependencies]
-apollo-parser = "0.6"
-codespan-reporting = "0.11"
-smear-derive = { path = "../derive" }
-smear-types = { path = "../types" }
-derive_more = "0.99"
-paste = "1" # remove when concat_idents is stable
-rowan = "0.15"
-salsa = "0.16"
-strsim = "0.10"
-viewit = "0.1.5"
-uuid = { version = "1.4", features = ["serde", "v4"] }
-ordered-float = { version = "3.9", features = ["std"] }
-thiserror = "1.0.31"
+apollo-parser = { workspace = true }
+codespan-reporting = { workspace = true }
+
+paste = "1"
+rowan = { workspace = true }
+strsim = { workspace = true }
+viewit = { workspace = true }
 
 # optional dependencies
 num-bigint = { version = "0.4", optional = true }
@@ -43,6 +38,10 @@ chrono = { version = "0.4", optional = true }
 
 indexmap = { version = "2", optional = true }
 url = { version = "2.4", optional = true }
+uuid = { version = "1.4", optional = true }
 
-[dev-dependencies]
-trybuild = "1"
+# derive
+darling = { version = "0.20", optional = true }
+syn = { version = "2", optional = true }
+quote = { version = "1", optional = true }
+proc-macro2 = { version = "1", optional = true }
