--- a/derive/Cargo.toml
+++ b/derive/Cargo.toml
@@ -10,6 +10,10 @@ description = "A placeholder"
 [lib]
 proc-macro = true
 
+[features]
+default = ["smear-types/derive"]
+indexmap = ["smear-types/indexmap"]
+
 [dependencies]
 darling = { version = "0.20", features = ["diagnostics"] }
 heck = "0.4"
@@ -17,6 +21,6 @@ indexmap = "2"
 proc-macro2 = "1"
 prettyplease = "0.2"
 quote = "1"
-syn = "2"
+syn = { workspace = true }
 
 smear-types = { path = "../types", default-features = false, features = ["derive"] }
