--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ resolver = "2"
 
 [workspace.dependencies]
 apollo-parser = "0.6"
+apollo-encoder = "0.7"
 codespan-reporting = "0.11"
 rowan = "0.15"
 strsim = "0.10"
