--- a/smear/Cargo.toml
+++ b/smear/Cargo.toml
@@ -19,7 +19,8 @@ indexmap = ["dep:indexmap"]
 url = ["dep:url"]
 
 [dependencies]
-apollo-parser = "0.6"
+apollo-parser = { workspace = true }
+apollo-encoder = { workspace = true }
 codespan-reporting = "0.11"
 smear-derive = { path = "../derive" }
 smear-types = { path = "../types" }
