--- a/smear/Cargo.toml
+++ b/smear/Cargo.toml
@@ -2,50 +2,51 @@
 name = "smear"
 version.workspace = true
 edition.workspace = true
-repository.workspace = true
-homepage.workspace = true
+# repository.workspace = true
+# homepage.workspace = true
 license.workspace = true
-description = "a placeholder"
+description = "A graphql query parser and optimizer for over any database."
 
 [features]
 default = []
 
-bigint = ["dep:num-bigint"]
-bigdecimal = ["dep:bigdecimal"]
-chrono = ["dep:chrono"]
-decimal = ["dep:rust_decimal"]
-humantime = ["dep:humantime"]
-indexmap = ["dep:indexmap"]
-url = ["dep:url"]
+# bigint = ["dep:num-bigint"]
+# bigdecimal = ["dep:bigdecimal"]
+# chrono = ["dep:chrono"]
+# decimal = ["dep:rust_decimal"]
+# humantime = ["dep:humantime"]
+# indexmap = ["dep:indexmap"]
+# url = ["dep:url"]
 
 [dependencies]
-apollo-parser = { workspace = true }
-apollo-encoder = { workspace = true }
-codespan-reporting = "0.11"
-smear-derive = { path = "../derive" }
-smear-types = { path = "../types" }
-derive_more = "0.99"
-paste = "1" # remove when concat_idents is stable
-rowan = "0.15"
-salsa = "0.16"
-strsim = "0.10"
-strum = "0.25"
-viewit = "0.1.5"
-uuid = { version = "1.4", features = ["serde", "v4"] }
-ordered-float = { version = "3.9", features = ["std"] }
-once_cell = "1.18"
-thiserror = "1.0.31"
+apollo-parser.workspace = true
+apollo-encoder.workspace = true
+salsa.workspace = true
+# codespan-reporting = "0.11"
+# smear-derive = { path = "../derive" }
+# smear-types = { path = "../types" }
+# derive_more = "0.99"
+# paste = "1" # remove when concat_idents is stable
+# rowan = "0.15"
+# salsa = "0.16"
+# strsim = "0.10"
+# strum = "0.25"
+# viewit = "0.1.5"
+# uuid = { version = "1.4", features = ["serde", "v4"] }
+# ordered-float = { version = "3.9", features = ["std"] }
+# once_cell = "1.18"
+# thiserror = "1.0.31"
 
-# optional dependencies
-num-bigint = { version = "0.4", optional = true }
-bigdecimal = { version = "0.4", optional = true }
-rust_decimal = { version = "1.32", optional = true }
+# # optional dependencies
+# num-bigint = { version = "0.4", optional = true }
+# bigdecimal = { version = "0.4", optional = true }
+# rust_decimal = { version = "1.32", optional = true }
 
-humantime = { version = "2.1", optional = true }
-chrono = { version = "0.4", optional = true }
+# humantime = { version = "2.1", optional = true }
+# chrono = { version = "0.4", optional = true }
 
-indexmap = { version = "2", optional = true }
-url = { version = "2.4", optional = true }
+# indexmap = { version = "2", optional = true }
+# url = { version = "2.4", optional = true }
 
-[dev-dependencies]
-trybuild = "1"
+# [dev-dependencies]
+# trybuild = "1"
