--- a/smear-parser/Cargo.toml
+++ b/smear-parser/Cargo.toml
@@ -14,4 +14,5 @@ bytes = ["chumsky/bytes"]
 
 [dependencies]
 chumsky = { version = "0.10", default-features = false }
+derive_more = { version = "2", default-features = false, features = ["unwrap", "is_variant", "try_unwrap"] }
 paste = "1"
