--- a/smear-parser/Cargo.toml
+++ b/smear-parser/Cargo.toml
@@ -15,4 +15,5 @@ bytes = ["chumsky/bytes"]
 [dependencies]
 chumsky = { version = "0.10", default-features = false }
 derive_more = { version = "2", default-features = false, features = ["unwrap", "is_variant", "try_unwrap"] }
+either = { version = "1", default-features = false }
 paste = "1"
