--- a/smear-parser/Cargo.toml
+++ b/smear-parser/Cargo.toml
@@ -14,6 +14,6 @@ bytes = ["chumsky/bytes"]
 
 [dependencies]
 chumsky = { version = "0.10", default-features = false }
-derive_more = { version = "2", default-features = false, features = ["unwrap", "is_variant", "try_unwrap"] }
+derive_more = { version = "2", default-features = false, features = ["unwrap", "is_variant", "try_unwrap", "from", "into", "deref", "deref_mut", "as_ref"] }
 either = { version = "1", default-features = false }
 paste = "1"
