--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,25 +1,19 @@
 [workspace]
 members = [
   "smear",
-  "smear-parser"
+  "smear-graphql",
+  "smear-parser",
 ]
 resolver = "3"
-
-[workspace.dependencies]
-apollo-parser = "0.8"
-apollo-encoder = "0.8"
-codespan-reporting = "0.11"
-salsa = "0.19"
-strsim = "0.11"
-smol_str = "0.3"
-viewit = "0.1.5"
-syn = { version = "2", features = ["full"] }
-
 
 [workspace.package]
 version = "0.0.0"
 edition = "2021"
 repository = "https://github.com/al8n/smear"
 homepage = "https://github.com/al8n/smear"
-license = "Apache-2.0/MIT"
+license = "Apache-2.0 OR MIT"
+
+[workspace.dependencies]
+smear-graphql = { path = "smear-graphql", default-features = false }
+smear-parser = { path = "smear-parser", default-features = false }
 
