Add const trait bounds for parsers

--- a/smear-graphql/Cargo.toml
+++ b/smear-graphql/Cargo.toml
@@ -14,4 +14,6 @@ std = ["smear-parser/std"]
 bytes = ["smear-parser/bytes"]
 
 [dependencies]
+chumsky.workspace = true
+derive_more.workspace = true
 smear-parser.workspace = true
