--- a/smear-parser/Cargo.toml
+++ b/smear-parser/Cargo.toml
@@ -14,8 +14,8 @@ std = ["chumsky/default"]
 bytes = ["chumsky/bytes", "dep:bytes"]
 
 [dependencies]
-chumsky = { version = "0.10", default-features = false, features = ["extension"] }
-derive_more = { version = "2", default-features = false, features = ["unwrap", "is_variant", "try_unwrap", "from", "into", "deref", "deref_mut", "as_ref"] }
+chumsky.workspace = true
+derive_more.workspace = true
 either = { version = "1", default-features = false }
 paste = "1"
 
