--- a/smear-parser/Cargo.toml
+++ b/smear-parser/Cargo.toml
@@ -9,7 +9,7 @@ license.workspace = true
 [features]
 default = ["std"]
 alloc = ["smear-utils/alloc"]
-std = ["chumsky/default", "smear-utils/default"]
+std = ["chumsky/default", "smear-utils/default", "thiserror/default"]
 
 bytes = ["chumsky/bytes", "dep:bytes", "smear-utils/bytes"]
 
@@ -19,7 +19,7 @@ derive_more.workspace = true
 either = { version = "1", default-features = false }
 paste = "1"
 smear-utils.workspace = true
-thiserror = "2"
+thiserror.workspace = true
 
 bytes = { version = "1", default-features = false, optional = true }
-bstr = { version = "1", default-features = false, optional = true }
+bstr = { workspace = true, optional = true }
