--- a/smear-utils/Cargo.toml
+++ b/smear-utils/Cargo.toml
@@ -9,11 +9,15 @@ license.workspace = true
 [features]
 default = ["std"]
 alloc = []
-std = ["chumsky/default"]
+std = ["chumsky/default", "thiserror/default"]
 
 bytes = ["chumsky/bytes", "dep:bytes"]
 
 [dependencies]
+ascii = { version = "1", default-features = false }
 chumsky.workspace = true
+derive_more.workspace = true
 
 bytes = { version = "1", default-features = false, optional = true }
+bstr = { workspace = true, optional = true }
+thiserror.workspace = true
