--- a/smear-graphql/Cargo.toml
+++ b/smear-graphql/Cargo.toml
@@ -11,16 +11,18 @@ default = ["std"]
 alloc = ["smear-parser/alloc"]
 std = ["smear-parser/default", "thiserror/default"]
 
-bytes = ["smear-parser/bytes"]
-bstr = ["dep:bstr", "smear-parser/bstr"]
+bytes = ["dep:bytes", "smear-parser/bytes", "logosky/bytes"]
+bstr = ["dep:bstr", "smear-parser/bstr", "logosky/bstr"]
 
 [dependencies]
 logos = { version = "0.15", default-features = false, features = ["export_derive"] }
 chumsky.workspace = true
 derive_more.workspace = true
+logosky.workspace = true
 smear-parser.workspace = true
 thiserror.workspace = true
 
+bytes = { workspace = true, optional = true }
 bstr = { workspace = true, optional = true }
 
 [dev-dependencies]
