--- a/smear-graphql/Cargo.toml
+++ b/smear-graphql/Cargo.toml
@@ -9,16 +9,17 @@ license.workspace = true
 [features]
 default = ["std"]
 alloc = ["smear-parser/alloc"]
-std = ["smear-parser/default", "thiserror/default"]
+std = ["smear-parser/default", "thiserror/default", "either/default"]
 
 bytes = ["dep:bytes", "smear-parser/bytes", "logosky/bytes"]
 bstr = ["dep:bstr", "smear-parser/bstr", "logosky/bstr"]
 
 [dependencies]
-logos = { version = "0.15", default-features = false, features = ["export_derive"] }
 chumsky.workspace = true
 derive_more.workspace = true
+either = { version = "1", default-features = false }
 logosky.workspace = true
+logos = { version = "0.15", default-features = false, features = ["export_derive"] }
 smear-parser.workspace = true
 thiserror.workspace = true
 
