--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,10 +19,13 @@ rust-version = "1.89"
 [workspace.dependencies]
 bstr = { version = "1", default-features = false }
 bytes = { version = "1", default-features = false }
-chumsky = { version = "0.10", default-features = false }
+chumsky = { version = "0.11", default-features = false }
 derive_more = { version = "2", default-features = false, features = ["unwrap", "is_variant", "try_unwrap", "from", "into", "deref", "deref_mut", "as_ref", "display"] }
 logosky = { version = "*", path = "../logosky", default-features = false }
+
+paste = "1"
 thiserror = { version = "2", default-features = false }
+
 
 smear-graphql = { path = "smear-graphql", default-features = false }
 smear-parser = { path = "smear-parser", default-features = false }
