--- a/smear-graphql/Cargo.toml
+++ b/smear-graphql/Cargo.toml
@@ -21,6 +21,7 @@ derive_more.workspace = true
 either = { version = "1", default-features = false }
 logosky.workspace = true
 logos = { version = "0.15", default-features = false, features = ["export_derive"] }
+paste.workspace = true
 smear-parser.workspace = true
 thiserror.workspace = true
 
