--- a/smear-graphql/Cargo.toml
+++ b/smear-graphql/Cargo.toml
@@ -9,11 +9,11 @@ license.workspace = true
 [features]
 default = ["std", "smallvec"]
 alloc = ["smear-parser/alloc"]
-std = ["smear-parser/default", "thiserror/default", "either/default"]
+std = ["smear-parser/default", "thiserror/default", "either/default", "bytes?/default", "bstr?/default", "hipstr?/default"]
 
 bytes = ["dep:bytes", "smear-parser/bytes", "logosky/bytes"]
 bstr = ["dep:bstr", "smear-parser/bstr", "logosky/bstr"]
-
+hipstr = ["dep:hipstr", "logosky/hipstr"]
 
 [dependencies]
 derive_more.workspace = true
@@ -24,6 +24,7 @@ smear-parser.workspace = true
 thiserror.workspace = true
 
 smallvec = { version = "1", default-features = false, features = ["const_new"], optional = true }
+hipstr = { version = "0.8", default-features = false, optional = true }
 bytes = { workspace = true, optional = true }
 bstr = { workspace = true, optional = true }
 
