--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -175,35 +175,7 @@ jobs:
         path: ~/.cargo
         key: ${{ runner.os }}-coverage-dotcargo
     - name: Run test
-      run: cargo hack test --each-feature
-  
-  sanitizer:
-    name: sanitizer
-    strategy:
-      matrix:
-        os:
-          - ubuntu-latest
-    runs-on: ${{ matrix.os }}
-    steps:
-      - uses: actions/checkout@v4
-      - name: Cache cargo build and registry
-        uses: actions/cache@v4
-        with:
-          path: |
-            ~/.cargo/registry
-            ~/.cargo/git
-            target
-          key: ${{ runner.os }}-sanitizer-${{ hashFiles('**/Cargo.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-sanitizer-
-      - name: Install Rust
-        run: rustup update $nightly && rustup default $nightly
-      - name: Install rust-src
-        run: rustup component add rust-src
-      - name: Install cargo-hack
-        run: cargo install cargo-hack
-      - name: ASAN / LSAN / TSAN (Linux)
-        run: ci/sanitizer.sh
+      run: cargo test --all-features
 
   miri-tb:
     name: miri-tb-${{ matrix.target }}-${{ matrix.cfg }}
@@ -296,43 +268,6 @@ jobs:
       - name: Miri
         run: |
           bash ci/miri_sb.sh ${{ matrix.target }} ${{ matrix.cfg }}
-
-  # valgrind
-  valgrind:
-    name: valgrind
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - name: Cache cargo build and registry
-        uses: actions/cache@v4
-        with:
-          path: |
-            ~/.cargo/registry
-            ~/.cargo/git
-            target
-          key: ubuntu-latest-valgrind-${{ hashFiles('**/Cargo.lock') }}
-          restore-keys: |
-            ubuntu-latest-valgrind-
-
-      - name: Install Rust ${{ env.stable }}
-        uses: actions-rs/toolchain@v1
-        with:
-            toolchain: ${{ env.stable }}
-            override: true
-      - name: Install Valgrind
-        run: |
-          sudo apt-get update -y
-          sudo apt-get install -y valgrind
-      # Compile tests
-      # - name: cargo build foo
-      #   run: cargo build --bin foo
-      #   working-directory: integration
-
-      # Run with valgrind
-      # - name: Run valgrind foo
-      #   run: valgrind --error-exitcode=1 --leak-check=full --show-leak-kinds=all ./target/debug/foo
-      #   working-directory: integration
-
   coverage:
     name: coverage
     runs-on: ubuntu-latest
@@ -342,7 +277,6 @@ jobs:
       - build
       - cross
       - test
-      - sanitizer
     steps:
       - uses: actions/checkout@v4
       - name: Install latest nightly
