--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -174,6 +174,13 @@ jobs:
       with:
         path: ~/.cargo
         key: ${{ runner.os }}-coverage-dotcargo
+    - name: Use lld-link (Windows)
+      if: runner.os == 'Windows'
+      run: |
+        choco install -y llvm
+        $LLVM = (Get-Command lld-link.exe).Source | Split-Path -Parent
+        echo "RUSTFLAGS=${env:RUSTFLAGS} -C linker=lld-link -C link-arg=/DEBUG:FASTLINK -C link-arg=/INCREMENTAL:NO" >> $env:GITHUB_ENV
+        lld-link /V
     - name: Install LLVM + LLD and use ld64.lld (macOS)
       if: runner.os == 'macOS'
       run: |
