--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,7 +39,7 @@ jobs:
           - windows-latest
     runs-on: ${{ matrix.os }}
     steps:
-    - uses: actions/checkout@v4
+    - uses: actions/checkout@v5
     - name: Install Rust
       # --no-self-update is necessary because the windows environment cannot self-update rustup.exe.
       run: rustup update stable --no-self-update && rustup default stable
@@ -58,7 +58,7 @@ jobs:
           - windows-latest
     runs-on: ${{ matrix.os }}
     steps:
-    - uses: actions/checkout@v4
+    - uses: actions/checkout@v5
     - name: Install Rust
       # --no-self-update is necessary because the windows environment cannot self-update rustup.exe.
       run: rustup update stable --no-self-update && rustup default stable
@@ -91,7 +91,7 @@ jobs:
           - wasm32-wasip2
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v5
       - name: Cache cargo build and registry
         uses: actions/cache@v4
         with:
@@ -119,7 +119,7 @@ jobs:
           - windows-latest
     runs-on: ${{ matrix.os }}
     steps:
-    - uses: actions/checkout@v4
+    - uses: actions/checkout@v5
     - name: Cache cargo build and registry
       uses: actions/cache@v4
       with:
@@ -153,7 +153,7 @@ jobs:
           - windows-latest
     runs-on: ${{ matrix.os }}
     steps:
-    - uses: actions/checkout@v4
+    - uses: actions/checkout@v5
     - name: Cache cargo build and registry
       uses: actions/cache@v4
       with:
@@ -174,6 +174,30 @@ jobs:
       with:
         path: ~/.cargo
         key: ${{ runner.os }}-coverage-dotcargo
+    - name: Use lld-link (Windows)
+      if: runner.os == 'Windows'
+      shell: pwsh
+      run: |
+        # lld already comes with Chocolatey llvm on GH runners; install/upgrade if needed
+        choco upgrade -y llvm
+
+        # Ensure LLVM bin is on PATH (where lld-link.exe lives)
+        $llvmBin = 'C:\Program Files\LLVM\bin'
+        if (-not (Test-Path $llvmBin)) {
+          Write-Error "LLVM bin not found at $llvmBin"
+          exit 1
+        }
+        echo "PATH=$llvmBin;$env:PATH" >> $env:GITHUB_ENV
+
+        # Verify
+        & "$llvmBin\lld-link.exe" --version
+
+        # Tell Cargo to use lld-link for MSVC target
+        echo "CARGO_TARGET_X86_64_PC_WINDOWS_MSVC_LINKER=lld-link.exe" >> $env:GITHUB_ENV
+
+        # Make PDB generation lighter & avoid incremental weirdness in CI
+        echo "RUSTFLAGS=$env:RUSTFLAGS -C link-arg=/DEBUG:FASTLINK -C link-arg=/INCREMENTAL:NO" >> $env:GITHUB_ENV
+
     - name: Install LLVM + LLD and use ld64.lld (macOS)
       if: runner.os == 'macOS'
       run: |
@@ -235,7 +259,7 @@ jobs:
             target: powerpc64-unknown-linux-gnu
     runs-on: ${{ matrix.os }}
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v5
       - name: Cache cargo build and registry
         uses: actions/cache@v4
         with:
@@ -281,7 +305,7 @@ jobs:
             target: powerpc64-unknown-linux-gnu
     runs-on: ${{ matrix.os }}
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v5
       - name: Cache cargo build and registry
         uses: actions/cache@v4
         with:
@@ -307,7 +331,7 @@ jobs:
       - cross
       - test
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v5
       - name: Install latest nightly
         uses: actions-rs/toolchain@v1
         with:
