--- a/smear-parser/Cargo.toml
+++ b/smear-parser/Cargo.toml
@@ -32,3 +32,7 @@ paste = "1"
 
 bytes = { workspace = true, optional = true }
 smallvec = { version = "1", default-features = false, features = ["const_new"], optional = true }
+
+[lints.rust]
+rust_2018_idioms = "warn"
+unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin)'] }
