--- a/smear-scaffold/Cargo.toml
+++ b/smear-scaffold/Cargo.toml
@@ -13,7 +13,8 @@ default = ["std"]
 alloc = []
 std = []
 
-cst = ["rowan"]
+cst = ["rowan", "logosky/rowan"]
+smallvec = ["logosky/smallvec"]
 
 [dependencies]
 derive_more.workspace = true
@@ -21,3 +22,7 @@ logosky.workspace = true
 smear-lexer.workspace = true
 
 rowan = { version = "0.16", optional = true }
+
+[lints.rust]
+rust_2018_idioms = "warn"
+unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin)'] }
